# yarrow

./: .coverage  .pylintrc  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini
example/: config.yaml  example.py
integration_tests/: requirements.txt  settings.py  test_base.py  test_sum.py
tests/: conftest.py  test_main.py  test_operator.py
yarrow/: main.py  models.py  operator.py  settings.py
